feat: subscription feature added including tests
